1.7.7.0/_sources/Reference/NodeReference/GafferImage/Resample.md.txt
Resample
========

Utility node used internally within GafferImage, but
not intended to be used directly by end users.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The output image generated by this node.

enabled
-------

Turns the node on and off.

in
--

The input image

matrix
------

The transform to be applied to the input image.
This must contain only translation and scaling.

filter
------

The filter used to perform the resampling. The name
of any OIIO filter may be specified. The default automatically
picks an appropriate high-quality filter based on whether
or not the image is being enlarged or reduced.

filterScale
-----------

A multiplier for the scale of the filter used.  Scaling up gives a softer
result, scaling down gives a sharper result ( likely to alias or even create black
patches where no pixels can be found ).  Less than 1 is not recommended unless
you have a special technical reason.

boundingMode
------------

The method used when a filter references pixels outside the
input data window.

expandDataWindow
----------------

Expands the data window by the filter radius, to include the
external pixels affected by the filter.

debug
-----

Enables debug output. The HorizontalPass setting outputs
an intermediate image filtered just in the horizontal
direction - this is an internal optimisation used when
filtering with a separable filter. The SinglePass setting
forces all filtering to be done in a single pass (as if
the filter was non-separable) and can be used for validating
the results of the the two-pass (default) approach.

filterDeep
----------

When on, deep images are resized accurately using the same filter
as flat images. When off, deep images are resized using the Nearest
filter.

Filters with negative lobes ( such as Lanczos3 which is the Default
for downscaling ) cannot be represented at all depths with perfect
accuracy, because deep alpha must be between 0 and 1, and must be
non-decreasing. In extreme cases, involving bright segments
with very low alpha, it may be preferable to choose a softer filter
without negative lobes ( like Blackman-Harris ).
> Caution :
>
> When deep images are resized using a filter, many additional deep samples are
> created per pixel. These slow down subsequent image processing and can create
> prohibitively large files. These overheads should be mitigated by using a
> DeepToFlat or DeepHoldout node soon after the Resize.